--- a/src/app/global_dark.css
+++ b/src/app/global_dark.css
@@ -99,7 +99,7 @@ a {
     box-sizing: border-box;
     /* color: rgb(255, 255, 255); */
     /* cursor: none; */
-    display: inline-block;
+    display: flex;
     /* float: right; */
     font-weight: 700;
     letter-spacing: 0.05em;
